# meta-backend

./: .gitmodules  CMakeLists.txt  README.md  distributor.cpp  distributor.h  main.cpp  rabbitMQ_conf.json
amqp/: rabbitmqadapter.cpp  rabbitmqadapter.h  rabbitmqconfig.cpp  rabbitmqconfig.h
threadpool/: blockingqueue.cpp  blockingqueue.h  worker.cpp  worker.h  workunit.h
